# RAGdx

./: .gitignore  README.md  README.new.md  ToD.md  pyproject.toml  pyproject.toml.bak
.ragdx/causal/: priors.json
.ragdx/optimization/00d483a8886e/configs/: 19d2e704a4_manual.yaml
.ragdx/optimization/61a48fdf64e1/configs/: 10101fbbf0_dspy.yaml  2086a1f58b_autorag.yaml  484198dba7_autorag.yaml  7e60991a55_autorag.yaml  9f4d4e8439_dspy.yaml
.ragdx/optimization/77b3ca813b1c/configs/: 0369805208_dspy.yaml  48530b0140_autorag.yaml  4f4a3381d8_autorag.yaml  5452aa787b_autorag.yaml  74b06c50fa_autorag.yaml  9da93582ae_manual.yaml
.ragdx/optimization/77b3ca813b1c/outputs/: 0369805208_metrics.json  4f4a3381d8_metrics.json  f0b7d52e24_metrics.json  fed0d70c91_metrics.json
.ragdx/optimization/ae2aacb8b17f/configs/: 04beb5db0a_manual.yaml  079f312dbc_manual.yaml  8c5ad1eefb_autorag.yaml  8ee785b15d_autorag.yaml  a7f8c60c79_dspy.yaml
.ragdx/optimization/c34466deabc2/configs/: ebd4300266_dspy.yaml
.ragdx/optimization/c34466deabc2/outputs/: 1bab4b84da_metrics.json  559acf9395_metrics.json  c61146008b_metrics.json  ff156ca1e8_metrics.json
.ragdx/optimization/edd46fa43881/configs/: 1b2690d6d8_dspy.yaml  26a234d4f3_autorag.yaml
.ragdx/optimization/sessions/: 00d483a8886e.json  61a48fdf64e1.json  77b3ca813b1c.json  ae2aacb8b17f.json  c34466deabc2.json  edd46fa43881.json
.ragdx/runs/: 56a9a538b642.json  6d595c196238.json  7706d1ac71b7.json  8ff1b5ff472b.json  b86536b2ad8c.json  c32b711d2530.json  c97dd57c3950.json  e9bfbe8c276a.json
.ragdx_demo/optimization/sessions/: ae853b59ac90.json
docs/: 01-overview.md  02-architecture.md  03-data-models.md  04-workflows.md  05-cli-and-dashboard.md  06-configuration.md  07-optimization-and-diagnosis.md  08-runtime-integrations.md  09-extension-guide.md  10-examples.md  11-limitations-and-roadmap.md  README.md  version.md
examples/: demo_dataset.jsonl  demo_evaluation.json  demo_evaluation_baseline.json  demo_evaluation_langchain.json  demo_evaluation_llamaindex.json  feedback_events.json  langchain_pipeline.py  llamaindex_pipeline.py  run_external_trial_example.py  run_langchain_trial.py  run_llamaindex_trial.py
result/: report.md
src/ragdx/: __init__.py  cli.py  demo.py
src/ragdx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragdx/core/: __init__.py  compare.py  datasets.py  diagnosis.py  evaluator.py  normalization.py  thresholds.py
src/ragdx/engines/: __init__.py  llm_diagnosis.py  ragas_adapter.py  ragchecker_adapter.py  root_cause.py
src/ragdx/optim/: __init__.py  autorag_adapter.py  dspy_adapter.py  executor.py  heavy_bo.py  langchain_adapter.py  llamaindex_adapter.py  planner.py
src/ragdx/schemas/: models.py
src/ragdx/storage/: __init__.py  run_store.py
src/ragdx/ui/: dashboard.py
src/ragdx/utils/: reporting.py
tests/: test_compare_and_store.py  test_diagnosis.py  test_feedback_and_causal.py  test_full_version_features.py  test_human_readable_plan.py  test_llm_diagnosis.py  test_llm_planner.py  test_optimization_session.py  test_plan_format.py  test_runtime_and_bo.py
(+11 files in other folders)
